--- a/src/GridRows/GridRows.css
+++ b/src/GridRows/GridRows.css
@@ -1,7 +1,6 @@
 .medals-widget-row {
   display: flex;
-  color: gray;
-  padding: 0.5em;
+  padding: 0.5em 0;
   border-bottom: 1px solid lightgray;
   font-weight: 600;
 }
