--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@ body {
   font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: gray;
 }
