add error message handling

--- a/src/GridRows/GridRows.css
+++ b/src/GridRows/GridRows.css
@@ -3,6 +3,7 @@
   padding: 0.5em 0;
   border-bottom: 1px solid lightgray;
   font-weight: 600;
+  font-size: 1.2em;
 }
 
 .medals-widget-row .row {
